# RCON-Protocol-Client

./: .gitignore  CMakeLists.txt  README.md  cr-UNIX.sh  cr-WIN32.sh  settings.cfg
include/: configParser.hpp  dbConnector.hpp  debug.hpp  funcEnums.hpp  login_frame.hpp  main_frame.hpp  rcon.hpp  window.hpp
src/: login_frame.cpp  main.cpp  main_frame.cpp  rcon.cpp  window.cpp
src/file-operations/: configParser.cpp
src/gui/: login_frame.cpp  main_frame.cpp  window.cpp
src/rcon-connection/: rcon.cpp
